(bugfix) change window.reload time. Add margin 0 for style error on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import 'animate.css';
 
 *{
-  margin: 0;
+  margin: 0 !important;
   box-sizing: 0 !important;
 }
 
